<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/navigation_code"
        android:icon="@drawable/code"
        android:title="@string/code"/>

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/badge"
        android:title="@string/rewards"/>

</menu>